# inf

./: .gitmodules  .shellcheckrc  Cargo.toml  LICENSE  Makefile  README.md  inf  inf.1  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  command.rs  config.rs  main.rs  output.rs  watch.rs
tests/: cli.rs  inf.bats  pty.rs  watch.rs
tests/support/: mod.rs
