[package]
name = "inf"
version = "1.3.0"
edition = "2024"
license = "MIT"
description = "Instant feedback for your compile and run loop"
repository = "https://github.com/magnickolas/inf"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
command-group = { version = "5.0.1", default-features = false, features = ["with-tokio"] }
libc = "0.2.186"
nix = { version = "0.31.3", default-features = false, features = ["process", "signal", "term"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
watchexec = "8.2.0"

[dev-dependencies]
assert_cmd = "2.2.2"
portable-pty = "0.9.0"
predicates = "3.1.4"
tempfile = "3.27.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
